Revert "[EN-20691] Update our SDK fork with the latest upstream changes (#9)"
This reverts commit ab1f31dad8fe2223f9ab852fba07b97212d6801b.