@@ -4,8 +4,6 @@ import com.eppo.sdk.deserializer.EppoValueDeserializer;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -13,99 +11,93 @@ import java.util.List;
  */
 @JsonDeserialize(using = EppoValueDeserializer.class)
 public class EppoValue {
-    private final EppoValueType type;
-    private String stringValue;
-    private Double doubleValue;
-    private Boolean boolValue;
-    private JsonNode jsonValue;
-    private List<String> stringArrayValue;
+    private String value;
+    private JsonNode node;
+    private EppoValueType type = EppoValueType.NULL;
+    private List<String> array;
 
-    private EppoValue(String stringValue) {
-        this.stringValue = stringValue;
-        this.type = stringValue != null ? EppoValueType.STRING : EppoValueType.NULL;
+    public EppoValue() {
     }
 
-    private EppoValue(Double doubleValue) {
-        this.doubleValue = doubleValue;
-        this.type = doubleValue != null ? EppoValueType.NUMBER : EppoValueType.NULL;
-    }
-    private EppoValue(Boolean boolValue) {
-        this.boolValue = boolValue;
-        this.type = boolValue != null ? EppoValueType.BOOLEAN : EppoValueType.NULL;
+    public EppoValue(String value, EppoValueType type) {
+        this.value = value;
+        this.type = type;
     }
 
-    private EppoValue(List<String> stringArrayValue) {
-        this.stringArrayValue = stringArrayValue;
-        this.type = stringArrayValue != null ? EppoValueType.ARRAY_OF_STRING : EppoValueType.NULL;
+    public EppoValue(List<String> array) {
+        this.array = array;
+        this.type = EppoValueType.ARRAY_OF_STRING;
     }
 
-    private EppoValue(JsonNode jsonValue) {
-        this.jsonValue = jsonValue;
+    public EppoValue(JsonNode node) {
+        this.node = node;
+        this.value = node.toString();
         this.type = EppoValueType.JSON_NODE;
     }
 
-    public static EppoValue valueOf(String stringValue) {
-        return new EppoValue(stringValue);
+    public EppoValue(EppoValueType type) {
+        this.type = type;
     }
 
-    public static EppoValue valueOf(double doubleValue) {
-        return new EppoValue(doubleValue);
+    public static EppoValue valueOf(String value) {
+        return new EppoValue(value, EppoValueType.STRING);
     }
 
-    public static EppoValue valueOf(boolean boolValue) {
-        return new EppoValue(boolValue);
+    public static EppoValue valueOf(double value) {
+        return new EppoValue(Double.toString(value), EppoValueType.NUMBER);
     }
 
-    public static EppoValue valueOf(JsonNode jsonValue) {
-        return new EppoValue(jsonValue);
+    public static EppoValue valueOf(boolean value) {
+        return new EppoValue(Boolean.toString(value), EppoValueType.BOOLEAN);
+    }
+
+    public static EppoValue valueOf(JsonNode node) {
+        return new EppoValue(node);
     }
 
     public static EppoValue valueOf(List<String> value) {
         return new EppoValue(value);
     }
 
-    public static EppoValue nullValue() {
-        return new EppoValue((String)null);
+    public static EppoValue valueOf() {
+        return new EppoValue(EppoValueType.NULL);
     }
 
     public double doubleValue() {
-        return this.doubleValue;
+        return Double.parseDouble(value);
     }
 
     public String stringValue() {
-        return this.stringValue;
+        return value;
     }
 
     public boolean boolValue() {
-        return this.boolValue;
+        return Boolean.valueOf(value);
     }
 
     public JsonNode jsonNodeValue() {
-        return this.jsonValue;
+        return this.node;
     }
 
     public List<String> arrayValue() {
-        return this.stringArrayValue;
-    }
-
-    public boolean isString() {
-        return this.type == EppoValueType.STRING;
+        return array;
     }
 
     public boolean isNumeric() {
-        return this.type == EppoValueType.NUMBER;
-    }
-
-    public boolean isBoolean() {
-        return this.type == EppoValueType.BOOLEAN;
+        try {
+            Double.parseDouble(value);
+            return true;
+        } catch (Exception e) {
+            return false;
+        }
     }
 
     public boolean isArray() {
         return type == EppoValueType.ARRAY_OF_STRING;
     }
 
-    public boolean isJson() {
-        return type == EppoValueType.JSON_NODE;
+    public boolean isBool() {
+        return type == EppoValueType.BOOLEAN;
     }
 
     public boolean isNull() {
@@ -114,19 +106,11 @@ public class EppoValue {
 
     @Override
     public String toString() {
-        switch(this.type) {
-            case STRING:
-                return this.stringValue;
-            case NUMBER:
-                return this.doubleValue.toString();
-            case BOOLEAN:
-                return this.boolValue.toString();
-            case ARRAY_OF_STRING:
-                return Collections.singletonList(this.stringArrayValue).toString();
-            case JSON_NODE:
-                return this.jsonValue.toString();
-            default: // NULL
-                return "";
+        if (this.isArray()) {
+            return List.of(this.array).toString();
+        } else if (this.type == EppoValueType.JSON_NODE) {
+            return this.node.toString();
         }
+        return this.value;
     }
 }
